# Fuel-Price-Open-Data

./: .gitignore  README.md  app.py  pyproject.toml
data/: departements.json
sql/: create_dimensions.sql  create_facts.sql  indexes.sql  materialiezd_views.sql  materialized_views.sql  update_table.sql
src/: import_history.py  main.py
src/dashboard/: ai_client.py  database.py  queries.py
src/dashboard/tabs/: chatbot_tab.py  map_tab.py  prices_tab.py  stats_tab.py
src/extract/: api_client.py  download_history.py
src/load/: db_loader.py
src/transform/: data_processor.py  xml_processor.py
