[project]
name = "fuel-price-open-data"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (<3.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "sqlalchemy (>=2.0.46,<3.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "streamlit (>=1.54.0,<2.0.0)",
    "plotly (>=6.5.2,<7.0.0)",
    "folium (>=0.20.0,<0.21.0)",
    "streamlit-folium (>=0.26.2,<0.27.0)",
    "google-genai (>=1.64.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
